# x4-nexus

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  active_save.txt  analyze_map_shapes.py  analyze_map_xml.py  arg_s_trans.xml  dump.py  dump_factions.py  extract2.py  extract_func.py  found.txt  gen_openapi.py  helios_macro.xml  package-lock.json  pyproject.toml  query_raw_maps.py  recover.py  scratch.py  scratch_acc.py  scratch_dump_helios.py  scratch_dump_s_ship.py  scratch_dump_s_trans.py  scratch_dump_storage.py  scratch_geteq.txt  scratch_map_meta.py  scratch_query.py  scratch_query_atlas.py  scratch_query_helios.py  scratch_read_catalog.py  scratch_recover.txt  scratch_roles.py  temp_factions.xml  temp_regions.xml  temp_save_start.xml  temp_save_start2.xml  test.py  (+5 more)
.github/workflows/: release.yml
.reasonix/truncated-results/: 1781378035441-a96e9ba2-run_command.txt
docs/: architecture.md  data-sources.md  data-tiers.md  developer-guide.md  dlc-duplication.md  logbook-categories.md  map-conflicts.md  merge-architecture.md  openapi.yaml  save-refresh-lifecycle.md  save-structure.md  setup-flow.md  stat-bars.md  station-building-compatibility.md  xml-taxonomy.md
docs/plan/: Missions.dc.html  missions-gaps.md  my-stations-overview.md  production-build.md
docs/xml_schemas/: colors_schema.md  equipmentmods_schema.md  factions_schema.md  god_schema.md  loadouts_schema.md  macros_schema.md  mapdefaults_schema.md  maps_schema.md  region_definitions_schema.md  terraforming_schema.md  wares_schema.md
icons/: manifest.json
scripts/: audit_save.py  doctor.ps1
test-results/: .last-run.json
test-results/test_logs-capture-logs/: error-context.md
