[project]
name = "x4-companion-workspace"
version = "0.0.0"
description = "X4: Foundations companion dashboard — uv workspace root (not a package itself)"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["packages/x4-api", "packages/x4-extract"]

[tool.uv.sources]
x4-api = { workspace = true }
x4-extract = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
    "httpx>=0.27",
    "httpx2",
    "lxml-stubs>=0.5.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["packages/x4-api/tests"]
asyncio_mode = "auto"
filterwarnings = ["error"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["packages/x4-api/src", "packages/x4-extract/src"]
